Ignore VSCode settings

--- a/.gitignore
+++ b/.gitignore
@@ -255,10 +255,10 @@ fabric.properties
 
 ### VisualStudioCode ###
 .vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
+# !.vscode/settings.json
+# !.vscode/tasks.json
+# !.vscode/launch.json
+# !.vscode/extensions.json
 
 ### VisualStudioCode Patch ###
 # Ignore all local history of files
@@ -268,3 +268,4 @@ fabric.properties
 
 .idea
 .venv
+.vscode
