--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ license = "MIT"
 [tool.poetry.dependencies]
 python = "^3.7"
 django = "^3.0.1"
+django-tables2 = "^2.2.1"
+pypinyin = "^0.36.0"
 
 [tool.poetry.dev-dependencies]
 
