--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,12 +6,25 @@ authors = ["Kip Yin <28321392+kipyin@users.noreply.github.com>"]
 license = "MIT"
 
 [tool.poetry.dependencies]
-python = "^3.7"
+python = "^3.6"
 django = "^3.0.1"
 django-tables2 = "^2.2.1"
 pypinyin = "^0.36.0"
 
 [tool.poetry.dev-dependencies]
+pytest = "^5.3.5"
+black = "^19.10b0"
+isort = "^4.3.21"
+
+[tool.black]
+py36 = true
+skip-numeric-underscore-normalization = true
+
+[tool.isort]
+multi_line_output = 3
+use_parentheses = true
+known_first_party = "lego_songbook"
+known_third_party = ["django", "django_tables2"]
 
 [build-system]
 requires = ["poetry>=0.12"]
