--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,11 @@ use_parentheses = true
 known_first_party = "lego_songbook"
 known_third_party = ["django", "django_tables2"]
 
+[[tool.poetry.source]]
+name = "aliyun"
+url = "https://mirrors.aliyun.com/pypi/simple/"
+default = true
+
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
