--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ pypinyin = "^0.36.0"
 pytest = "^5.3.5"
 black = "^19.10b0"
 isort = "^4.3.21"
+pytest-django = "^3.8.0"
 
 [tool.black]
 py36 = true
