--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ pytest = "^5.3.5"
 black = "^19.10b0"
 isort = "^4.3.21"
 pytest-django = "^3.8.0"
+coverage = "^5.0.3"
 
 [tool.black]
 py36 = true
