--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ isort = "^4.3.21"
 pytest-django = "^3.8.0"
 coverage = "^5.0.3"
 tox = "^3.14.3"
+fabric = "^2.5.0"
 
 [tool.black]
 skip-numeric-underscore-normalization = true
