--- a/.github/workflows/test-and-deploy.yaml
+++ b/.github/workflows/test-and-deploy.yaml
@@ -12,10 +12,10 @@ jobs:
       - name: Install Poetry
         run: |
           curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python3
-          source $HOME/.poetry/env
           
       - name: Build and Test
         run: |
+          source $HOME/.poetry/env
           poetry install -v
           poetry run pytest
           
@@ -25,4 +25,6 @@ jobs:
           LW_USER: ${{ secrets.LWUser }}
           LW_PASSWORD: ${{ secrets.LWPassword }}
           LW_PORT: ${{ secrets.LWPort }}
-        run: poetry run fab $LW_HOST deploy
+        run: |
+          source $HOME/.poetry/env
+          poetry run fab $LW_HOST deploy
