--- a/.github/workflows/test-and-deploy.yaml
+++ b/.github/workflows/test-and-deploy.yaml
@@ -15,6 +15,7 @@ jobs:
           
       - name: Build and Test
         run: |
+          ls -alt
           source $HOME/.poetry/env
           poetry install -v
           poetry run pytest
