--- a/.github/workflows/test-and-deploy.yaml
+++ b/.github/workflows/test-and-deploy.yaml
@@ -9,6 +9,7 @@ jobs:
     name: Test and Deploy
     runs-on: [ubuntu-18.04]
     steps:
+      - uses: actions/checkout@v2
       - name: Install Poetry
         run: |
           curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python3
