--- a/.github/workflows/test-and-deploy.yaml
+++ b/.github/workflows/test-and-deploy.yaml
@@ -18,11 +18,10 @@ jobs:
         run: |
           curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python3
           
-      - name: Build and Test
+      - name: Test
         run: |
           source $HOME/.poetry/env
-          poetry install -v
-          poetry run pytest
+          tox
           
       - name: Deploy
         env:
