Use poetry to call tox

--- a/.github/workflows/test-and-deploy.yaml
+++ b/.github/workflows/test-and-deploy.yaml
@@ -21,7 +21,7 @@ jobs:
       - name: Test
         run: |
           source $HOME/.poetry/env
-          tox
+          poetry run tox
           
       - name: Deploy
         env:
