Test remote file structure

--- a/.github/workflows/test-and-deploy.yaml
+++ b/.github/workflows/test-and-deploy.yaml
@@ -21,6 +21,7 @@ jobs:
           
       - name: Test
         run: |
+          ls /home/runner/.cache/pypoetry/
           source $HOME/.poetry/env
           poetry run tox
           
