Create the virtual env dir

--- a/.github/workflows/test-and-deploy.yaml
+++ b/.github/workflows/test-and-deploy.yaml
@@ -22,7 +22,7 @@ jobs:
           
       - name: Test
         run: |
-          ls /home/runner/.cache/pypoetry/
+          mkdir /home/runner/.cache/pypoetry/
           source $HOME/.poetry/env
           poetry run tox
           
