Create all intermediary dirs required

--- a/.github/workflows/test-and-deploy.yaml
+++ b/.github/workflows/test-and-deploy.yaml
@@ -22,7 +22,7 @@ jobs:
           
       - name: Test
         run: |
-          mkdir /home/runner/.cache/pypoetry/
+          mkdir -p /home/runner/.cache/pypoetry/virtualenvs
           source $HOME/.poetry/env
           poetry run tox
           
