--- a/.github/workflows/test-and-deploy.yaml
+++ b/.github/workflows/test-and-deploy.yaml
@@ -23,6 +23,7 @@ jobs:
       - name: Test
         run: |
           source $HOME/.poetry/env
+          poetry debug
           poetry run tox -v
           
       - name: Deploy
