Change fab command args

--- a/.github/workflows/test-and-deploy.yaml
+++ b/.github/workflows/test-and-deploy.yaml
@@ -35,4 +35,4 @@ jobs:
           LW_PORT: ${{ secrets.LWPort }}
         run: |
           source $HOME/.poetry/env
-          poetry run fab $LW_HOST deploy
+          poetry run fab deploy
