--- a/.github/workflows/test-and-deploy.yaml
+++ b/.github/workflows/test-and-deploy.yaml
@@ -22,16 +22,15 @@ jobs:
         run: |
           curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python3
           source $HOME/.poetry/env
-          poetry shell
 
       - name: Install dependencies
         run: poetry install -v
 
       - name: Lint
-        run: tox -e lint
+        run: poetry run tox -e lint
 
       - name: Test
-        run: tox -e py36
+        run: poetry run tox -e py36
           
       - name: Deploy
         if: github.ref == 'master'
