--- a/.github/workflows/test-and-deploy.yaml
+++ b/.github/workflows/test-and-deploy.yaml
@@ -21,16 +21,21 @@ jobs:
       - name: Install Poetry
         run: |
           curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python3
-          source $HOME/.poetry/env
 
       - name: Install dependencies
-        run: poetry install -v
+        run: |
+          source $HOME/.poetry/env
+          poetry install -v
 
       - name: Lint
-        run: poetry run tox -e lint
+        run: |
+          source $HOME/.poetry/env
+          poetry run tox -e lint
 
       - name: Test
-        run: poetry run tox -e py36
+        run: |
+          source $HOME/.poetry/env
+          poetry run tox -e py36
           
       - name: Deploy
         if: github.ref == 'master'
