--- a/.github/workflows/test-and-deploy.yaml
+++ b/.github/workflows/test-and-deploy.yaml
@@ -19,6 +19,7 @@ jobs:
 
       - name: Install Poetry
         run: |
+          echo '${{ github.ref }}'
           curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python3
 
       - name: Install dependencies
